--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,11 @@ jobs:
       run: npm run build
       working-directory: src/todo-app
 
-    - name: Run Frontend Tests
+    - name: Run Unit Tests
       run: npm run test:coverage
-      working-directory: src/todo-app
+
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+
+    - name: Run E2E Tests
+      run: npm run test:e2e
