--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "ai-sdlc",
-  "version": "0.1.0",
-  "private": true,
-  "description": "AI-driven SDLC repository",
+  "name": "ai-sdlc-root",
+  "version": "1.0.0",
+  "description": "Root package for AI SDLC project",
+  "main": "index.js",
   "scripts": {
-    "test:e2e": "bash ./run_e2e_tests.sh"
+    "test:coverage": "vitest run --coverage -c tests/vitest.config.ts",
+    "test:e2e": "bash tests/run_e2e_tests.sh"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "vitest": "^4.0.18",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "jsdom": "^28.0.0",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vue/test-utils": "^2.x.x",
     "@playwright/test": "^1.40.1",
     "dotenv": "^16.4.5",
     "wait-on": "^9.0.3"
