--- a/src/todo-app/package.json
+++ b/src/todo-app/package.json
@@ -7,17 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:e2e": "playwright test",
-    "test:coverage": "vitest run --coverage"
-  },
+        "test:e2e": "playwright test"
+      },
   "dependencies": {
     "vue": "^3.5.24"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vue/test-utils": "^2.x.x",
+    "jsdom": "^28.0.0",
     "vite": "^7.2.4",
-    "vitest": "^1.x.x",
-    "@vitest/coverage-v8": "^1.x.x",
-    "@vue/test-utils": "^2.x.x"
+    "vitest": "^4.0.18"
   }
 }
