fix(ci): Update CI workflow and package.json scripts for testing
- Modify root package.json to use 'npx vitest' for 'test:coverage' script.
- Remove redundant 'test:e2e' script from src/todo-app/package.json.
- Update .github/workflows/ci.yml to:
  - Add a root 'npm install' step.
  - Correctly run unit tests from the root context.
  - Keep frontend build steps within src/todo-app for E2E tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
       with:
         node-version: '20' # Or appropriate version for Vue.js 3
 
+    - name: Install Root Dependencies
+      run: npm install
+
     - name: Install Frontend Dependencies
       run: npm install
       working-directory: src/todo-app
