--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Root package for AI SDLC project",
   "main": "index.js",
   "scripts": {
-    "test:coverage": "vitest run --coverage -c tests/vitest.config.ts",
+    "test:coverage": "npx vitest run --coverage -c tests/vitest.config.ts",
     "test:e2e": "bash tests/run_e2e_tests.sh"
   },
   "keywords": [],
