--- a/src/todo-app/package.json
+++ b/src/todo-app/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    
-      },
+    "preview": "vite preview"
+  },
   "dependencies": {
     "vue": "^3.5.24"
   },
