--- a/src/todo-app/package.json
+++ b/src/todo-app/package.json
@@ -6,17 +6,29 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint . --fix",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@rushstack/eslint-patch": "^1.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "^4.0.18",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.x.x",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
+    "globals": "^17.3.0",
     "jsdom": "^28.0.0",
+    "typescript-eslint": "^8.54.0",
     "vite": "^7.2.4",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
