--- a/src/todo-app/tsconfig.json
+++ b/src/todo-app/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
